@@ -20,6 +20,7 @@ Christian Groessler        <cpg@aladdin.de>
 Corinna Vinschen           <vinschen@redhat.com>
 Dagobert Michelsen         <dam@opencsw.org>
 Daisuke GOTO               <gotoh@m-design.com>
+Dave Reisner               <d@falconindy.com>
 David Clissold             <cliss@austin.ibm.com>
 David J MacKenzie          <djm@catapult.va.pubnix.com>
 David O'Brien              <obrien@freebsd.org>
