@@ -79,6 +79,7 @@ TESTS =						\
   options					\
   pcre						\
   pcre-abort					\
+  pcre-invalid-utf8-input			\
   pcre-utf8					\
   pcre-z					\
   prefix-of-multibyte				\
